# Roseau_Load_Flow

./: .dockerignore  .flake8  .gitattributes  .gitignore  .latexindent.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Changelog.md  Dockerfile  LICENSE.md  Makefile  README.md  biome.json  biome.jsonc  conftest.py  pyproject.toml  zizmor.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md  feature_request.md
.github/workflows/: ci.yml  codspeed.yml  conda.yml  doc.yml  pre-commit.yml
benchmarks/: test_benchmarks.py
conda/: environment.yml  meta.yaml
data/: LVFeeder00939_summer.json  LVFeeder00939_winter.json  LVFeeder02639_summer.json  LVFeeder02639_winter.json  LVFeeder04790_summer.json  LVFeeder04790_winter.json  LVFeeder06713_summer.json  LVFeeder06713_winter.json  LVFeeder06926_summer.json  LVFeeder06926_winter.json  LVFeeder06975_summer.json  LVFeeder06975_winter.json  LVFeeder18498_summer.json  LVFeeder18498_winter.json  LVFeeder18769_summer.json  LVFeeder18769_winter.json  LVFeeder19558_summer.json  LVFeeder19558_winter.json  LVFeeder20256_summer.json  LVFeeder20256_winter.json  LVFeeder23832_summer.json  LVFeeder23832_winter.json  LVFeeder24400_summer.json  LVFeeder24400_winter.json  LVFeeder27429_summer.json  LVFeeder27429_winter.json  LVFeeder27681_summer.json  LVFeeder27681_winter.json  LVFeeder30216_summer.json  LVFeeder30216_winter.json  LVFeeder31441_summer.json  LVFeeder31441_winter.json  LVFeeder36284_summer.json  LVFeeder36284_winter.json  LVFeeder36360_summer.json  LVFeeder36360_winter.json  LVFeeder37263_summer.json  LVFeeder37263_winter.json  LVFeeder38211_summer.json  LVFeeder38211_winter.json  (+39 more)
doc/: .htaccess  Bibliography.bib  Changelog.md  Installation.md  License.md  Makefile  Solvers.md  api.rst  conf.py  index.md  index.rst  installation.md  modules.rst  robots.txt  roseau.load_flow.exceptions.rst  roseau.load_flow.io.dgs.rst  roseau.load_flow.io.dict.rst  roseau.load_flow.io.rst  roseau.load_flow.io.tests.rst  roseau.load_flow.models.buses.rst  roseau.load_flow.models.core.rst  roseau.load_flow.models.lines.line_characteristics.rst  roseau.load_flow.models.lines.lines.rst  roseau.load_flow.models.lines.rst  roseau.load_flow.models.lines.tests.rst  roseau.load_flow.models.loads.flexible_parameters.rst  roseau.load_flow.models.loads.loads.rst  roseau.load_flow.models.loads.rst  roseau.load_flow.models.loads.tests.rst  roseau.load_flow.models.rst  roseau.load_flow.models.transformers.rst  roseau.load_flow.models.transformers.tests.rst  roseau.load_flow.models.transformers.transformers.rst  roseau.load_flow.models.transformers.transformers_characteristics.rst  roseau.load_flow.network.electrical_network.rst  roseau.load_flow.network.rst  roseau.load_flow.rst  roseau.load_flow.tests.rst  roseau.load_flow.utils.constants.rst  roseau.load_flow.utils.json_mixin.rst  (+7 more)
doc/_static/: Constant_P_Projection.tex  Constant_Q_Projection.tex  Control_PU_Cons.tex  Control_PU_Prod.tex  Control_QU.tex  Control_Trajectory_PmaxU_QU.tex  Definitions.tex  Delta_Connection.tex  Domain_Pconst_QU_Eucl.tex  Domain_Pconst_QU_P.tex  Domain_Pconst_QU_Q.tex  Domain_Pconst_Qconst.tex  Domain_PmaxU_QU.tex  Domain_PmaxU_Qconst.tex  Euclidean_Projection.tex  Goldstein_and_Price.tex  Makefile  Plotting_MVFeeder210.html  Star_Connection.tex
doc/_static/Network/: Catalogue.html  LVFeeder00939.html  LVFeeder02639.html  LVFeeder04790.html  LVFeeder06713.html  LVFeeder06926.html  LVFeeder06975.html  LVFeeder18498.html  LVFeeder18769.html  LVFeeder19558.html  LVFeeder20256.html  LVFeeder23832.html  LVFeeder24400.html  LVFeeder27429.html  LVFeeder27681.html  LVFeeder30216.html  LVFeeder31441.html  LVFeeder36284.html  LVFeeder36360.html  (+22 more)
doc/advanced/: Floating_Neutral.md  Potential_Reference.md  Solvers.md  index.md
doc/images/: American_Delta_Connection.tex  American_Delta_Load.tex  American_Star_Connection.tex  American_Star_Load.tex  Bus.tex  Constant_P_Projection.tex  Constant_Q_Projection.tex  Control_PU_Cons.tex  Control_PU_Prod.tex  Control_QU.tex  Control_Trajectory_PmaxU_QU.tex  Delta_Voltage_Source.tex  Domain_Common.tikz  Domain_Pconst_QU_Eucl.tex  Domain_Pconst_QU_P.tex  Domain_Pconst_QU_Q.tex  Domain_Pconst_Qconst.tex  Domain_PmaxU_QU.tex  Domain_PmaxU_Qconst.tex  Euclidean_Projection.tex  European_Delta_Connection.tex  European_Delta_Load.tex  European_Star_Connection.tex  European_Star_Load.tex  Goldstein_And_Price.tex  Goldstein_and_Price.tex  Ground.tex  Makefile  PotentialRef.tex  PotentialRef_With_Ground.tex  Preamble.tex  Preambule.tex  Shunt_Line.tex  Simplified_Line.tex  Star_Voltage_Source.tex  Switch.tex
doc/models/: Bus.md  Ground.md  Line.md  Load.md  PotentialRef.md  Switch.md  Transformer.md  VoltageSource.md  index.md
doc/notebooks/: Advanced.ipynb  Getting_Started.ipynb  IO.ipynb  Short_Circuit.ipynb  advanced.ipynb  basic.ipynb  from_file.ipynb  index.md
doc/tmp/: getting_started.json
doc/usage/: Catalogues.md  Connecting_Elements.md  Data_Exchange.md  Extras.md  Flexible_Loads.md  Getting_Started.md  Plotting.md  Short_Circuit.md  index.md
recipe/: meta.yaml
roseau/load_flow/: CMakeLists.txt  __about__.py  __init__.py  _compat.py  _solvers.py  _wrapper.py  conf.py  conftest.py  constants.py  converters.py  exceptions.py  license.py  network.py  plotting.py  solvers.py  sym.py  testing.py  types.py  typing.py  units.py  wrapper.py
roseau/load_flow_single/: README.md  __init__.py  conftest.py  network.py  plotting.py
scripts/: generate_lv_line_parameters_catalogue.py  generate_network_catalogue_data.py  generate_single_test_networks.py  generate_test_networks.py  generate_transformer_parameters_catalogue.py  minhtml.py  network_files_upgrade.py  plot_network_catalogue.py  update_catalogue_networks.py
tutorials/: README.md  pyproject.toml  requirements.txt
tutorials/OpenDSS/: README.md  pyproject.toml
tutorials/OpenDSS/Tutorial_1/: Exercise_1.ipynb  README.md
tutorials/OpenDSS/Tutorial_2/: README.md  Tutorial-DERHC-1-Earth-Return.ipynb  Tutorial-DERHC-1-With-Neutral.ipynb
(+700 files in other folders)
