[project]
name = "roseau-load-flow"
version = "0.11.0"
description = "Highly capable three-phase load flow solver"
authors = [
    { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
    { name = "Sébastien Vallet", email = "sebastien.vallet@roseautechnologies.com" },
    { name = "Benoît Vinot", email = "benoit.vinot@roseautechnologies.com" },
    { name = "Florent Cadoux", email = "florent.cadoux@roseautechnologies.com" },
    { name = "Louise Muller", email = "louise.muller@roseautechnologies.com" },
    { name = "Victor Gouin" },
]
maintainers = [
    { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    # "License :: OSI Approved :: The 3-Clause BSD License (BSD-3-Clause)", # https://github.com/pypa/trove-classifiers/issues/70
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.5",
    "pandas>=1.4.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pint>=0.21.0",
    "typing-extensions>=4.6.2",
    "pyproj>=3.3.0",
    "certifi>=2023.5.7",
    "platformdirs>=4.0.0",
    "roseau-load-flow-engine==0.16.0",
]

[project.urls]
homepage = "https://www.roseautechnologies.com/roseau-load-flow/"
repository = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/"
issues = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/issues/"
documentation = "https://roseau-load-flow.roseautechnologies.com/"

[project.optional-dependencies]
plot = ["matplotlib>=3.7.2"]
graph = ["networkx>=3.0.0"]

[dependency-groups]
dev = [
    # Tests
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.1.0",
    "coverage[toml]>=7.0.5",
    "coverage-conditional-plugin>=0.9.0",
]
doc = [
    # Docs
    "sphinx>=8.0.2",
    "myst-parser>=0.16.1",
    "sphinx-math-dollar>=1.2.1",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.1",
    "sphinx-inline-tabs>=2022.1.2b11",
    "furo>=2022.9.29",
    "sphinxcontrib-googleanalytics>=0.3",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-sitemap>=2.5.1",
    "sphinxext-opengraph>=0.9.1",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["roseau"]
exclude = ["*tests*", "*conftest.py"]

[tool.hatch.build.targets.wheel]
packages = ["roseau"]

[tool.ruff]
line-length = 120
show-fixes = true
namespace-packages = ["roseau"]

[tool.ruff.lint]
select = ["E", "F", "C90", "W", "B", "UP", "I", "RUF100", "TID", "SIM", "PT", "PIE", "N", "C4", "NPY", "T10", "PTH"]
unfixable = ["B"]
ignore = ["E501", "B024", "N818", "UP038", "PTH123"]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-pytest-style.parametrize-values-type = "tuple"
mccabe.max-complexity = 15

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F403", "F405"]

[tool.coverage.run]
branch = true
omit = ["roseau/load_flow/__about__.py"]
plugins = ["coverage_conditional_plugin"]

[tool.coverage.coverage_conditional_plugin.rules]
no-cover-if-py-gte-311 = "sys_version_info >= (3, 11)"
no-cover-if-py-lt-311 = "sys_version_info < (3, 11)"

[tool.coverage.paths]
source = ["roseau/load_flow/"]

[tool.coverage.report]
# Skip files with 100% coverage
skip_covered = true
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no-cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Type checking
    "if TYPE_CHECKING:",
]
ignore_errors = true
fail_under = 93

[tool.coverage.html]
directory = "htmlcov"

# Pytest
[tool.pytest.ini_options]
addopts = "--color=yes -n=0 --import-mode=importlib"
testpaths = ["roseau/load_flow/"]
filterwarnings = []
markers = ["no_patch_engine"]
