[project]
name = "roseau-load-flow"
version = "0.13.0"
description = "Highly capable multi-phase load flow solver"
authors = [
    { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
    { name = "Sébastien Vallet", email = "sebastien.vallet@roseautechnologies.com" },
    { name = "Benoît Vinot", email = "benoit.vinot@roseautechnologies.com" },
    { name = "Florent Cadoux", email = "florent.cadoux@roseautechnologies.com" },
    { name = "Louise Muller", email = "louise.muller@roseautechnologies.com" },
    { name = "Audrey Ficot", email = "audrey.ficot@roseautechnologies.com" },
    { name = "Victor Gouin" },
]
maintainers = [
    { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    # "License :: OSI Approved :: The 3-Clause BSD License (BSD-3-Clause)", # https://github.com/pypa/trove-classifiers/issues/70
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.5",
    "pandas>=1.4.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pint>=0.21.0",
    "typing-extensions>=4.6.2",
    "pyproj>=3.3.0",
    "certifi>=2023.5.7",
    "platformdirs>=4.0.0",
    "roseau-load-flow-engine==0.18.0",
]

[project.urls]
homepage = "https://www.roseautechnologies.com/roseau-load-flow/"
repository = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/"
issues = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/issues/"
documentation = "https://roseau-load-flow.roseautechnologies.com/"

[project.optional-dependencies]
plot = ["matplotlib>=3.7.2"]
graph = ["networkx>=3.0.0"]

[dependency-groups]
dev = [
    # Tests
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.1.0",
    "covdefaults>=2.3.0",
]
doc = [
    # Docs
    "sphinx>=8.0.2",
    "myst-parser>=0.16.1",
    "sphinx-math-dollar>=1.2.1",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.1",
    "sphinx-inline-tabs>=2022.1.2b11",
    "furo>=2022.9.29",
    "sphinxcontrib-googleanalytics>=0.3",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinxext-opengraph>=0.9.1",
    "ipython>=8.31.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["roseau.load_flow", "roseau.load_flow_single"]
module-root = ""
source-exclude = ["*tests*", "*conftest.py"]

[tool.ruff]
line-length = 120
show-fixes = true
namespace-packages = ["roseau"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "C90",
    "W",
    "B",
    "UP",
    "I",
    "RUF100",
    "TID",
    "SIM",
    "PT",
    "PIE",
    "N",
    "C4",
    "NPY",
    "T10",
    "PTH",
]
unfixable = ["B"]
ignore = ["E501", "B024", "N818", "UP038", "PTH123"]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-pytest-style.parametrize-values-type = "tuple"
mccabe.max-complexity = 15

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F403", "F405"]

[tool.coverage.run]
branch = false
plugins = ["covdefaults"]
source = ["roseau/load_flow/", "roseau/load_flow_single/"]

[tool.coverage.report]
fail_under = 93

[tool.coverage.html]
directory = "htmlcov"

# Pytest
[tool.pytest.ini_options]
addopts = "--color=yes -n=0 --import-mode=importlib"
testpaths = ["roseau/load_flow/", "roseau/load_flow_single/"]
filterwarnings = []
markers = ["no_patch_engine"]

# Typos
[tool.typos.files]
extend-exclude = [
    "*.svg",
    "*.html",
    "*.tex",
    "*.xml",
    "roseau/load_flow/tests/data/",
]

[tool.typos.default]
extend-ignore-re = [
    # spellchecker:disable-line
    "(?Rm)^.*(#|//|%)\\s*spellchecker:disable-line$",
    # spellchecker:<on|off>
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
extend-ignore-identifiers-re = ["YNd[0-9]*"]

[tool.typos.default.extend-identifiers]
# The phase "ba" sometimes appears
ba = "ba"
# np.arange
arange = "arange"
# In Bibliography.bib
Stichting = "Stichting"

[tool.typos.default.extend-words]
# typ and lod are heavily used in the DGS format
typ = "typ"
lod = "lod"
# Phase to Neutral
pn = "pn"

# MD format
[tool.mdformat]
wrap = 120
number = true
