[project]
name = "roseau-load-flow"
version = "0.13.1"
description = "Highly capable multi-phase load flow solver"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
  { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
  { name = "Sébastien Vallet", email = "sebastien.vallet@roseautechnologies.com" },
  { name = "Benoît Vinot", email = "benoit.vinot@roseautechnologies.com" },
  { name = "Florent Cadoux", email = "florent.cadoux@roseautechnologies.com" },
  { name = "Louise Muller", email = "louise.muller@roseautechnologies.com" },
  { name = "Audrey Ficot", email = "audrey.ficot@roseautechnologies.com" },
  { name = "Victor Gouin" },
]
maintainers = [
  { name = "Ali Hamdan", email = "ali.hamdan@roseautechnologies.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "certifi>=2023.5.7",
  "geopandas>=1.0.0",
  "numpy>=2.0.0",
  "pandas>=2.1.0",
  "pint>=0.21.0",
  "platformdirs>=4.0.0",
  "pyproj>=3.3.0",
  "roseau-load-flow-engine>=0.18.1",
  "shapely>=2.0.0",
  "typing-extensions>=4.6.2",
]

[project.urls]
documentation = "https://roseau-load-flow.roseautechnologies.com/"
homepage = "https://www.roseautechnologies.com/roseau-load-flow/"
issues = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/issues/"
repository = "https://github.com/RoseauTechnologies/Roseau_Load_Flow/"

[project.optional-dependencies]
graph = ["networkx>=3.3.0"]
plot = ["matplotlib>=3.9.0"]

[dependency-groups]
dev = [
  "covdefaults>=2.3.0",
  "pytest>=9.0.0",
  "pytest-cov>=5.0.0",
]
doc = [
  "furo>=2022.9.29",
  "ipython>=8.31.0",
  "myst-parser>=0.16.1",
  "sphinx>=8.0.2",
  "sphinx-autoapi>=3.0.0",
  "sphinx-copybutton>=0.5.1",
  "sphinx-inline-tabs>=2022.1.2b11",
  "sphinx-math-dollar>=1.2.1",
  "sphinxcontrib-bibtex>=2.5.0",
  "sphinxcontrib-googleanalytics>=0.3",
  "sphinxext-opengraph>=0.9.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

# Coverage
[tool.coverage.run]
branch = false
plugins = ["covdefaults"]
source = ["roseau/load_flow/", "roseau/load_flow_single/"]

[tool.coverage.report]
fail_under = 93

[tool.coverage.html]
directory = "htmlcov"

# MD format
[tool.mdformat]
wrap = 120
number = true

# Pytest
[tool.pytest]
addopts = ["--color=yes", "--import-mode=importlib"]
filterwarnings = []
markers = ["no_patch_engine"]
testpaths = ["roseau/load_flow/", "roseau/load_flow_single/"]

# Ruff
[tool.ruff]
line-length = 120
show-fixes = true
namespace-packages = ["roseau"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "C90",
  "W",
  "B",
  "UP",
  "I",
  "RUF100",
  "TID",
  "SIM",
  "PT",
  "PIE",
  "N",
  "C4",
  "NPY",
  "T10",
  "PTH",
]
unfixable = ["B"]
ignore = ["E501", "B024", "N818", "PTH123"]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-pytest-style.parametrize-values-type = "tuple"
mccabe.max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F403", "F405"]

[tool.ruff.format]
docstring-code-format = true

# Tombi
[tool.tombi]
schema.strict = false

[[tool.tombi.schemas]]
root = "tool.typos"
path = "https://raw.githubusercontent.com/crate-ci/typos/refs/heads/master/config.schema.json"
include = ["pyproject.toml"]

# Typos
[tool.typos.files]
extend-exclude = [
  "*.svg",
  "*.html",
  "*.tex",
  "*.xml",
  "roseau/load_flow/tests/data/",
]

[tool.typos.default]
extend-ignore-re = [
  # spellchecker:disable-line
  "(?Rm)^.*(#|//|%)\\s*spellchecker:disable-line$",
  # spellchecker:<on|off>
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
  # spellchecker:ignore-next-line
  "(#|//)\\s*spellchecker:ignore-next-line\\n.*",
]
extend-ignore-identifiers-re = ["YNd[0-9]*"]

[tool.typos.default.extend-identifiers]
# The phase "ba" sometimes appears
ba = "ba"
# np.arange
arange = "arange"
# In Bibliography.bib
Stichting = "Stichting"

[tool.typos.default.extend-words]
# typ and lod are heavily used in the DGS format
typ = "typ"
lod = "lod"
# Phase to Neutral
pn = "pn"

# UV
[tool.uv]
managed = true

[tool.uv.build-backend]
module-name = ["roseau.load_flow", "roseau.load_flow_single"]
module-root = ""
source-exclude = ["*tests*", "*conftest.py"]
