[tool.poetry]
name = "roseau-load-flow-tutorials"
version = "0.1"
description = "Tutorials for Roseau Load Flow inspired from different software"
authors = [
    "Ahmad Zubair <ahmad.zubair@roseautechnologies.com>",
]
maintainers = ["Ahmad Zubair <ahmad.zubair@roseautechnologies.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/RoseauTechnologies/Roseau_Load_Flow_Tutorials/"
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
roseau-load-flow = ">=0.9.1"
dss-python = ">=0.15.7"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
ruff = ">=0.3.0"

[tool.ruff]
line-length = 120
target-version = "py310"
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "C90", "W", "B", "UP", "I", "RUF100", "TID", "SIM", "PT", "PIE", "N", "C4", "NPY", "T10"]
unfixable = ["B"]
ignore = ["E501", "B024", "N818", "UP038"]
flake8-tidy-imports.ban-relative-imports = "all"
flake8-pytest-style.parametrize-values-type = "tuple"
mccabe.max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F403", "F405"]
